[package]
name = "mino_cli"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mino_core = { path = "../mino_core" }
grid = { path = "../grid" }
cursive = "0.13"
