[package]
name = "mino_core"
version = "0.1.0"
authors = ["Shintaro Seki <s2pch.luck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = { path = "../grid" }
input_counter = { path = "../input_counter" }
bitflags = "1.0"
lazy_static = "1.4.0"
